--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -19,6 +19,54 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/player1"
+            android:text="player1"
+            android:height="50dp"
+            android:background="@color/colorLight"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/player5"
+            android:text="player5"
+            android:height="50dp"
+            android:background="@color/colorLight"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/player2"
+                android:text="player2"
+                android:width="50dp"
+                android:height="50dp"
+                android:background="@color/colorLight"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/player6"
+                android:text="player6"
+                android:width="50dp"
+                android:height="50dp"
+                android:background="@color/colorLight"/>
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:id="@+id/startButton"
             android:text="MULAI"/>
@@ -30,7 +78,32 @@
             android:id="@+id/answerButton"
             android:text="JAWAB"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/player3"
+                android:text="player3"
+                android:width="50dp"
+                android:height="50dp"
+                android:background="@color/colorLight"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/player7"
+                android:text="player7"
+                android:width="50dp"
+                android:height="50dp"
+                android:background="@color/colorLight"/>
+        </LinearLayout>
+
     </LinearLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -43,5 +116,31 @@
         android:id="@+id/randomedCardRecycler">
     </android.support.v7.widget.RecyclerView>
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/player4"
+            android:text="player4"
+            android:width="50dp"
+            android:height="50dp"
+            android:background="@color/colorLight"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/player8"
+            android:text="player8"
+            android:width="50dp"
+            android:height="50dp"
+            android:background="@color/colorLight"/>
+
+    </LinearLayout>
 
 </LinearLayout>
