--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -12,6 +12,7 @@
             android:gravity="center"
             android:textStyle="italic|bold"
             android:textAllCaps="true"
+            android:textColor="@color/colorLight"
             android:textSize="70px"
             android:paddingBottom="10sp"
             android:paddingRight="10sp"
